--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ dnspython==2.2.1
     # via email-validator
 email-validator==1.1.3
     # via Flask-AppBuilder (setup.py)
-git+https://github.com/Always-prog/flask
+flask==2.2.5
     # via
     #   Flask-AppBuilder (setup.py)
     #   flask-babel
